--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>日本-天下五劍</title>
-         <audio src="media/520.MP3" autoplay loop></audio>
+         <audio src="media/520.mp3" autoplay loop></audio>
     </head>
     <body bgcolor="#99FFFF">
             <h1 align="center"><mark><font color="#FF00FF">日本-天下五劍</h1></mark></font>
