--- a/004.html
+++ b/004.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>三日月宗近</title>
-         <audio src="media/520.MP3" autoplay loop></audio>
+         <audio src="media/520.mp3" autoplay loop></audio>
     </head>
     <body bgcolor="#99FFFF">
         <h2 align="center"><font color="#FF00FF">三日月宗近</h2></font>
