--- a/005.html
+++ b/005.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>大典太光世</title>
-         <audio src="media/520.MP3" autoplay loop></audio>
+         <audio src="media/520.mp3" autoplay loop></audio>
     </head>
     <body bgcolor="#99FFFF">
         <h2 align="center"><font color="#FF00FF">大典太光世</h2></font>
